# 3DEP-Lidar-pkg

./: README.md  environment.yml  index.html  pyproject.toml  requirements.txt
.github/workflows/: run_unitests.yml
data/: dataset_metadata.csv  dataset_metadata.json  pipeline_template.json
docs/: index.html
docs/3DEP-Lidar-pkg/src/: index.html
docs/src/: data_fetcher.html  metadata_generator.html
docs/tests/: index.html  test_data_fetcher.html
html/3DEP-Lidar-pkg/src/: vis.html
notebooks/: data_fetcher.ipynb  visualizer.ipynb
src/: data_fetcher.py  metadata_generator.py  vis.py
tests/: test_data_fetcher.py
